--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "styles-loader": "^2.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --mode development",
