--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "http-server": "^0.12.3",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "standard": "^14.3.4",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
