--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "styles-loader": "^2.0.0"
   },
