adaptive, product, mixin-media

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
+    "owl.carousel": "^2.3.4",
     "styles-loader": "^2.0.0"
   },
   "scripts": {
